Refactor hero section in index.html; update styles in style.css and responsive.css for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="fixed-navbar">
-      <div class="small-header">
+      <div class="small-header" >
         <div class="small-header-content">
           <ul class="small-header-ul">
             <li>Marketplace</li>
@@ -106,30 +106,28 @@
       </div>
     </header>
     <main>
-      <div class="hero">
-        <div class="hero-section-one"></div>
-        <div class="hero-section-two">
-          <div class="hero-content">
-            <div class="hero-head-title">
-              <h1>
-                Introducing <br />
-                PROS AI Agents
-              </h1>
-
-              <p>
-                Revolutionize how your business operates with <br />PROS AI
-                Agents.
-              </p>
-              <button class="hero-btn">Learn More</button>
-            </div>
-            <div class="hero-image">
-              <div class="hero-image-content">
-                <iframe src="https://cdn.lottielab.com/l/3UsT1Ggz7Ntoew.html?loop=false" height="560" width="680" frameborder="0"></iframe>
+     <div class="hero">
+      <div class="herobg-section-one"></div>
+      <div class="herobg-section-two">
+        <div class="hero-content-main">
+           <div class="hero-content-head">
+            <h1>Introducing PROS AI Agents</h1>
+            <div>
+            <h5>Revolutionize how your business operates with <br>
+              PROS AI Agents. </h5>
               </div>
-            </div>
-          </div>
+            <!-- <div class="hero-button-flex"> -->
+            <button class="hero-btn">
+              Learn More
+            </button>
+            <!-- </div> -->
+           </div>
+           <div class="hero-content-iframe">
+            <iframe src="https://cdn.lottielab.com/l/3UsT1Ggz7Ntoew.html?loop=false" frameborder="0" width="680" height="560"></iframe>
+           </div>
         </div>
       </div>
+     </div>
     </main>
     <footer style="background-color: #04314b" id="visibility">
       <div class="footer-container">
