Add demo booking section and resource cards to index.html; enhance styles in style.css and responsive.css

--- a/index.html
+++ b/index.html
@@ -160,6 +160,61 @@
           </div>
         </div>
       </div>
+      <div class="demo-book-main">
+        <div class="demo-book-inner">
+          
+            <h2 class="demo-book-title">Book a Demo With An Outperformance Expert</h2>
+          
+          <div class="demo-book-content">
+            <p>Meet with a PROS professional. Put the product—and our service—to the test. Together, we’ll help your company perform to its potential.</p>
+            <button class="demo-btn">Get Started</button>
+          </div>
+        </div>
+      </div>
+      <div class="resource-card-heading">
+        <div class="margin-auto">
+        <h2>Additional Resources</h2>
+        <span>View All Resources <i class="resource-icon"></i></span>
+      </div>
+      </div>
+
+      <div class="resource">
+        <div class="grid-group">
+
+        <div class="resource-card">
+          <div class="title-para">
+          <h2>Customer Outperformer Awards</h2>
+          <div class="paragraph">
+						Recognizing PROS customers who redefine success through innovation, transformation, and measurable impact.
+          </div>
+        </div>
+        <div class="resource-btn">read more <span class="arrow"></span></div>
+        </div>
+
+
+        <div class="resource-card">
+          <div class="title-para">
+          <h2>6 Quick Pricing Wins to Manage Tariffs</h2>
+          <div class="paragraph">
+						Tariffs create cost pressures, prompting businesses to adjust pricing, supply chains, and customer strategies. Quick pricing wins can help offset their immediate impact while longer-term solutions develop.
+          </div>
+        </div>
+        <div class="resource-btn">read more <span class="arrow"></span></div>
+        </div>
+
+        <div class="resource-card">
+          <div class="title-para">
+          <h2>What Exactly is Dynamic Pricing in the Airline Industry?</h2>
+          <div class="paragraph">
+						Let’s think critically about the word “dynamic,” meaning constant change. When we think about the concept of airline pricing, we often think about the inherent static nature of the filed fares.		
+          </div>
+        </div>
+        <div class="resource-btn">read more <span class="arrow"></span></div>
+        </div>
+
+
+        </div>
+      </div>
     </main>
     <footer style="background-color: #04314b" id="visibility">
       <div class="footer-container">
